--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <head> Weather Website
+    <title>IXR Weather Website</title>
+    <head> 
         <link rel="stylesheet" href="style.css"></head>
-    
+    <body>
+     <h1> test</h1>
+    </body>
 </html>
