--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-    <title>IXR Weather Website</title>
     <head> 
+        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <title>IXR Weather Website</title>
         <link rel="stylesheet" href="style.css"></head>
     <body>
      <h1> test</h1>
