--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <title>IXR Weather Website</title>
         <link rel="stylesheet" href="style.css"></head>
     <body>
-     <h1> test</h1>
+     
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="enter 
+                city name" spellcheck="false">
+                <button><img src="images/search.png"></button>
+                
+            </div>
+        </div>
     </body>
 </html>
