--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
                 <input type="text" placeholder="enter 
                 city name" spellcheck="false">
                 <button><img src="images/search.png"></button>
-                
+            </div>
+            <div>
+                <img src="images/rain.png" class="weather-icon">
+                <h1 class="temp">22°C</h1>
+                <h2 class="city">New York</h2>
             </div>
         </div>
     </body>
