--- a/index.html
+++ b/index.html
@@ -2,19 +2,35 @@
     <head> 
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
         <title>IXR Weather Website</title>
-        <link rel="stylesheet" href="style.css"></head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
      
         <div class="card">
             <div class="search">
-                <input type="text" placeholder="enter 
-                city name" spellcheck="false">
+                <input type="text" placeholder="enter city name" spellcheck="false">
                 <button><img src="images/search.png"></button>
             </div>
             <div>
                 <img src="images/rain.png" class="weather-icon">
                 <h1 class="temp">22°C</h1>
                 <h2 class="city">New York</h2>
+                <div class="details">
+                    <div class="col">
+                        <img src="images/humidity.png">
+                        <div>
+                            <p class="humidity">50%</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="images/wind.png">
+                        <div>
+                            <p class="wind">5 Km/h</p>
+                            <p>Wind</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
