--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button><img src="images/search.png"></button>
             </div>
             <div>
-                <img src="images/rain.png" class="weather-icon">
+                <img src="images/rain.png" class="weatherIcon">
                 <h1 class="temp">22°C</h1>
                 <h2 class="city">New York</h2>
                 <div class="details">
@@ -33,5 +33,45 @@
                 </div>
             </div>
         </div>
+        <script>
+            const apiKey = "c5655916dc718c003210cb43ac8ffce8";
+            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+            const searchBox = document.querySelector(".search input");
+            const searchBtn = document.querySelector(".search button");
+            const weatherIcon = document.querySelector(".weatherIcon");
+
+            async function checkWeather(city){
+                const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+                var data = await response.json();
+
+                console.log(data);
+
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp)  + "°C";
+                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+
+                if(data.weather[0].main == "Clouds"){
+                    weatherIcon.src = "images/clouds.png";
+                }
+                else if(data.weather[0].main == "Rain"){
+                    weatherIcon.src = "images/rain.png";
+                } else if(data.weather[0].main == "Clear"){
+                    weatherIcon.src = "images/clear.png";
+                } else if(data.weather[0].main == "Mist"){
+                    weatherIcon.src = "images/snow.png";
+                } else if(data.weather[0].main == "Snow"){
+                    weatherIcon.src = "images/drizzle.png";
+                } else if(data.weather[0].main == "Drizzle"){
+                    weatherIcon.src = "images/mist.png";
+                }
+                
+            }
+            searchBtn.addEventListener("click", ()=>{
+                checkWeather(searchBox.value);
+            });
+            checkWeather();
+        </script>
     </body>
 </html>
