--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
     <head> 
-        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IXR Weather Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-     
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="enter city name" spellcheck="false">
@@ -13,6 +12,10 @@
             </div>
             <div>
                 <img src="images/rain.png" class="weatherIcon">
+                <div class="time">
+                    <img src="images/clock.png" class="time-icon">
+                    <p class="local-time">--:--</p>
+                </div>
                 <h1 class="temp">22°C</h1>
                 <h2 class="city">New York</h2>
                 <div class="details">
@@ -42,36 +45,61 @@
             const weatherIcon = document.querySelector(".weatherIcon");
 
             async function checkWeather(city){
-                const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-                var data = await response.json();
+                try {
+                    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+                    if (!response.ok) {
+                        throw new Error('City not found');
+                    }
+                    const data = await response.json();
 
-                console.log(data);
+                    document.querySelector(".city").innerHTML = data.name;
+                    document.querySelector(".temp").innerHTML = Math.round(data.main.temp)  + "°C";
+                    document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                    document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
 
-                document.querySelector(".city").innerHTML = data.name;
-                document.querySelector(".temp").innerHTML = Math.round(data.main.temp)  + "°C";
-                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-                document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+                    // Calculate local time
+                    const timezoneOffset = data.timezone;
+                    const localTime = new Date(new Date().getTime() + timezoneOffset * 1000);
+                    const hours = localTime.getUTCHours().toString().padStart(2, '0');
+                    const minutes = localTime.getUTCMinutes().toString().padStart(2, '0');
+                    document.querySelector(".local-time").innerHTML = `${hours}:${minutes}`;
 
-                if(data.weather[0].main == "Clouds"){
-                    weatherIcon.src = "images/clouds.png";
+                    // Update weather icon
+                    const weatherMain = data.weather[0].main.toLowerCase();
+                    switch (weatherMain) {
+                        case "clouds":
+                            weatherIcon.src = "images/clouds.png";
+                            break;
+                        case "rain":
+                            weatherIcon.src = "images/rain.png";
+                            break;
+                        case "clear":
+                            weatherIcon.src = "images/clear.png";
+                            break;
+                        case "mist":
+                            weatherIcon.src = "images/mist.png";
+                            break;
+                        case "snow":
+                            weatherIcon.src = "images/snow.png";
+                            break;
+                        case "drizzle":
+                            weatherIcon.src = "images/drizzle.png";
+                            break;
+                        default:
+                            weatherIcon.src = "images/default.png";
+                            break;
+                    }
+                } catch (error) {
+                    console.error(error);
+                    alert('Failed to fetch weather data. Please try again.');
                 }
-                else if(data.weather[0].main == "Rain"){
-                    weatherIcon.src = "images/rain.png";
-                } else if(data.weather[0].main == "Clear"){
-                    weatherIcon.src = "images/clear.png";
-                } else if(data.weather[0].main == "Mist"){
-                    weatherIcon.src = "images/snow.png";
-                } else if(data.weather[0].main == "Snow"){
-                    weatherIcon.src = "images/drizzle.png";
-                } else if(data.weather[0].main == "Drizzle"){
-                    weatherIcon.src = "images/mist.png";
-                }
-                
             }
-            searchBtn.addEventListener("click", ()=>{
+
+            searchBtn.addEventListener("click", () => {
                 checkWeather(searchBox.value);
             });
-            checkWeather();
+
+            checkWeather("New York"); // Default city
         </script>
     </body>
 </html>
