--- a/index.html
+++ b/index.html
@@ -36,10 +36,22 @@
                 </div>
                 <button class="view-more">View More Details</button>
                 <div class="more-details" style="display: none;">
-                    <p class="pressure">Pressure: --</p>
-                    <p class="visibility">Visibility: --</p>
-                    <p class="sunrise">Sunrise: --</p>
-                    <p class="sunset">Sunset: --</p>
+                    <div class="detail-item">
+                        <img src="images/pressure.png" class="detail-icon">
+                        <p class="pressure">Pressure: --</p>
+                    </div>
+                    <div class="detail-item">
+                        <img src="images/visibility.png" class="detail-icon">
+                        <p class="visibility">Visibility: --</p>
+                    </div>
+                    <div class="detail-item">
+                        <img src="images/sunrise.png" class="detail-icon">
+                        <p class="sunrise">Sunrise: --</p>
+                    </div>
+                    <div class="detail-item">
+                        <img src="images/sunset.png" class="detail-icon">
+                        <p class="sunset">Sunset: --</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,6 +64,7 @@
             const weatherIcon = document.querySelector(".weatherIcon");
             const viewMoreBtn = document.querySelector(".view-more");
             const moreDetails = document.querySelector(".more-details");
+            const card = document.querySelector(".card");
 
             async function checkWeather(city){
                 try {
@@ -66,40 +79,60 @@
                     document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
                     document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
 
-                    // Calculate local time
                     const timezoneOffset = data.timezone;
                     const localTime = new Date(new Date().getTime() + timezoneOffset * 1000);
                     const hours = localTime.getUTCHours().toString().padStart(2, '0');
                     const minutes = localTime.getUTCMinutes().toString().padStart(2, '0');
                     document.querySelector(".local-time").innerHTML = `${hours}:${minutes}`;
 
-                    // Update weather icon
                     const weatherMain = data.weather[0].main.toLowerCase();
+                    let backgroundGradient = '';
+                    let gifUrl = '';
+                    card.classList.remove('text-black');
+                    document.querySelector(".local-time").classList.remove('text-black');
                     switch (weatherMain) {
                         case "clouds":
                             weatherIcon.src = "images/clouds.png";
+                            backgroundGradient = "linear-gradient(135deg, #b0c4de, #54798a)";
+                            gifUrl = "images/clouds.gif";
                             break;
                         case "rain":
+                        case "drizzle":
                             weatherIcon.src = "images/rain.png";
+                            backgroundGradient = "linear-gradient(135deg, #00008b, #0000ff)";
+                            gifUrl = "images/rain.gif";
                             break;
                         case "clear":
                             weatherIcon.src = "images/clear.png";
+                            backgroundGradient = "linear-gradient(135deg, #ffff00, #696969)";
+                            gifUrl = "images/clear.gif";
+                            card.classList.add('text-black');
+                            document.querySelector(".local-time").classList.add('text-black');
                             break;
                         case "mist":
                             weatherIcon.src = "images/mist.png";
+                            backgroundGradient = "linear-gradient(135deg, #696969, #d3d3d3)";
+                            gifUrl = "images/mist.gif";
+                            card.classList.add('text-black');
+                            document.querySelector(".local-time").classList.add('text-black');
                             break;
                         case "snow":
                             weatherIcon.src = "images/snow.png";
-                            break;
-                        case "drizzle":
-                            weatherIcon.src = "images/drizzle.png";
+                            backgroundGradient = "linear-gradient(135deg, #808080, #ffffff)";
+                            gifUrl = "images/snow.gif";
+                            card.classList.add('text-black');
+                            document.querySelector(".local-time").classList.add('text-black');
                             break;
                         default:
                             weatherIcon.src = "images/default.png";
+                            backgroundGradient = "linear-gradient(135deg, #0026fe, #54798a)";
+                            gifUrl = "images/default.gif";
                             break;
                     }
+                    card.style.backgroundImage = `${backgroundGradient}, url('${gifUrl}')`;
+                    card.style.backgroundSize = 'cover';
+                    card.style.backgroundBlendMode = 'overlay';
 
-                    // Update more details
                     document.querySelector(".pressure").innerHTML = `Pressure: ${data.main.pressure} hPa`;
                     document.querySelector(".visibility").innerHTML = `Visibility: ${data.visibility} m`;
                     const sunrise = new Date(data.sys.sunrise * 1000).toLocaleTimeString();
@@ -121,7 +154,7 @@
                 moreDetails.style.display = moreDetails.style.display === "none" ? "block" : "none";
             });
 
-            checkWeather("New York"); // Default city
+            checkWeather("New York");
         </script>
     </body>
 </html>
